fixing alignment of actions in hebrew.

--- a/app/styles/_rtl_baseLayout.scss
+++ b/app/styles/_rtl_baseLayout.scss
@@ -48,5 +48,11 @@ body.rtl{
         min-width: 225px;
       }
     }
+
+    .page-content-titles{
+      .page-content-titles-actions{
+        float: left;
+      }
+    }
   }
 }
